@@ -8,6 +8,8 @@ Changes log
        - Fixed NullPointerException when requestind a Directory with a query string. Issue #1206.
          Reported by Ralph van Etten.
        - Fixed support of non-bytes ranges. Issue #1132.
+       - Fixed encoding issue when using CookieAuthenticator. Issue #1159.
+         Reported by Arjohn Kampman.
 
 - 2.3.7 (03/14/2016)
     - Bugs fixed
